Improve description of additional widget offer, fix some minor layout issues #369748808298440

--- a/src/TrueOrFalse.Frontend.Web/Views/Help/Widget.less
+++ b/src/TrueOrFalse.Frontend.Web/Views/Help/Widget.less
@@ -343,8 +343,10 @@ Pricing table
 
 .feature-list {
     list-style: none;
-    padding-left: 0px;
     margin-bottom: 20px;
+
+    padding-left: 30px;
+    text-indent: -10px;
 
     li {
         font-size: 16px;
